# hyperdex-rs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  execplan-distributed-delete-group-snapshot-safety.md  execplan-failure-testing-get-divergence.md  execplan-hegel-admin-protocol-property.md
.agent/: check.sh  setup.sh
.config/: nextest.toml
.github/workflows/: acceptance.yml  actionlint.yml  lint.yml  test.yml
crates/cluster-config/: Cargo.toml
crates/cluster-config/src/: lib.rs
crates/consensus-core/: Cargo.toml
crates/consensus-core/src/: lib.rs  openraft_backend.rs
crates/consensus-core/src/omnipaxos_backend/: mod.rs
crates/consensus-core/src/omnipaxos_backend/tests/: mod.rs
crates/control-plane/: Cargo.toml
crates/control-plane/src/: lib.rs
crates/control-plane/src/tests/: hegel_properties.rs  mod.rs
crates/data-model/: Cargo.toml
crates/data-model/src/: lib.rs
crates/data-model/src/tests/: hegel.rs  mod.rs
crates/data-plane/: Cargo.toml
crates/data-plane/src/: lib.rs
crates/data-plane/src/tests/: hegel_properties.rs  mod.rs
crates/engine-memory/: Cargo.toml
crates/engine-memory/src/: lib.rs
crates/engine-memory/src/tests/: hegel.rs  mod.rs
crates/engine-rocks/: Cargo.toml
crates/engine-rocks/src/: lib.rs
crates/grpc-api/: Cargo.toml
crates/grpc-api/src/: v1.rs
crates/hyperdex-admin-protocol/: Cargo.toml
crates/hyperdex-admin-protocol/src/: lib.rs
crates/hyperdex-admin-protocol/src/tests/: hegel_properties.rs  mod.rs
crates/hyperdex-client-protocol/: Cargo.toml
crates/hyperdex-client-protocol/src/: lib.rs
crates/legacy-frontend/: Cargo.toml
crates/legacy-frontend/src/: lib.rs
crates/legacy-frontend/src/tests/: mod.rs
crates/legacy-protocol/: Cargo.toml
crates/legacy-protocol/src/: lib.rs
crates/legacy-protocol/src/tests/: hegel_properties.rs  mod.rs
crates/placement-core/: Cargo.toml
crates/placement-core/src/: lib.rs
crates/placement-core/src/tests/: hegel.rs  hegel_properties.rs  mod.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: grpc_api.rs  lib.rs  main.rs
crates/server/src/tests/: mod.rs
crates/server/tests/: dist_multiprocess_harness.rs
crates/simulation-harness/: Cargo.toml
crates/simulation-harness/src/: lib.rs
crates/simulation-harness/src/tests/: distributed_simulation.rs  failure_testing.rs  mod.rs
crates/storage-core/: Cargo.toml
crates/storage-core/src/: lib.rs
crates/transport-core/: Cargo.toml
crates/transport-core/src/: lib.rs
crates/transport-grpc/: Cargo.toml  build.rs
crates/transport-grpc/proto/: hyperdex.proto
crates/transport-grpc/src/: hyperdex.rs  lib.rs
crates/transport-grpc/tests/: public_frontend.rs
docs/: autoplan-hyperdex-rs.md  autoplan.md  capability-ladder.md  future-directions.md  hyhac-compatibility-surface.md  ledger.md  loop-ledger-hyperdex-rs.md  papers-and-mvp-notes.md  workstreams.md  worktrees.md
docs/archive/: README.md
docs/archive/phase-1/: autoplan.md  ledger.md
docs/workstreams/active/async-modernization/: ledger.md  plan.md
docs/workstreams/active/distributed-simulation/: ledger.md  plan.md
docs/workstreams/active/failure-testing/: ledger.md  plan.md
docs/workstreams/active/fuzzing-hardening/: ledger.md
docs/workstreams/active/hegel-properties/: ledger.md  plan.md
docs/workstreams/active/history-scrub/: ledger.md  plan.md
docs/workstreams/active/nextest-fast-feedback/: ledger.md  plan.md
docs/workstreams/active/panic-hardening/: ledger.md  plan.md
docs/workstreams/active/recovery-ordering/: ledger.md  plan.md
docs/workstreams/active/simulation-applicability/: ledger.md  plan.md
docs/workstreams/active/validation-ci/: ledger.md  plan.md
docs/workstreams/async-modernization/: ledger.md  plan.md
docs/workstreams/backlog/georeplication/: plan.md
docs/workstreams/backlog/graph-vector-layer/: ledger.md  plan.md
docs/workstreams/backlog/object-storage-layer/: ledger.md  plan.md
docs/workstreams/backlog/programmability/: ledger.md  plan.md
docs/workstreams/backlog/temporal-layer/: ledger.md  plan.md
docs/workstreams/backlog/warp-transactions/: plan.md
docs/workstreams/completed/async-modernization/: ledger.md  plan.md
docs/workstreams/completed/coordinator-config-evidence/: ledger.md  plan.md
docs/workstreams/completed/fuzzing-hardening/: ledger.md  plan.md
docs/workstreams/completed/history-scrub/: plan.md
docs/workstreams/completed/live-hyhac/: ledger.md  plan.md
docs/workstreams/completed/multiprocess-harness/: ledger.md  plan.md
docs/workstreams/completed/nextest-fast-feedback/: ledger.md  plan.md
docs/workstreams/completed/panic-hardening/: ledger.md  plan.md
docs/workstreams/completed/simulation-proof/: ledger.md  plan.md
docs/workstreams/completed/validation-ci/: ledger.md  plan.md
docs/workstreams/coordinator-config-evidence/: ledger.md  plan.md
docs/workstreams/failure-testing/: plan.md
docs/workstreams/fuzzing-hardening/: ledger.md  plan.md
docs/workstreams/georeplication/: ledger.md  plan.md
docs/workstreams/live-hyhac/: ledger.md  plan.md
docs/workstreams/multiprocess-harness/: ledger.md  plan.md
docs/workstreams/simulation-proof/: ledger.md  plan.md
docs/workstreams/validation-ci/: ledger.md  plan.md
docs/workstreams/warp-transactions/: ledger.md  plan.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: busybee_frame_decode.rs  legacy_request_decode.rs
scripts/: check-actions.sh  check-clippy.sh  check-gitleaks.sh  check-module-layout.sh  check-nextest-fast.sh  check-rustfmt.sh  check-shell-syntax.sh  check-workspace-tests.sh  install-actionlint.sh  install-cargo-nextest.sh  install-gitleaks.sh  install-prek.sh  install-uv.sh  list-prek-hooks.py  verify-live-acceptance.sh
scripts/history-scrub/: count-home-friel.sh  count_home_friel.py  make-fixups.sh  rewrite-and-count.sh  scrub-easy-paths.py
