[package]
name = "data-model"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bytes.workspace = true
ordered-float.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
hegel = { package = "hegeltest", version = "0.2.6" }
