[package]
name = "engine-rocks"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
data-model = { path = "../data-model" }
rocksdb.workspace = true
serde_json.workspace = true
storage-core = { path = "../storage-core" }
