[package]
name = "hyperdex-admin-protocol"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
cluster-config = { path = "../cluster-config" }
data-model = { path = "../data-model" }
serde.workspace = true
