[package]
name = "placement-core"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
data-model = { path = "../data-model" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
hegel = { package = "hegeltest", version = "0.3.4" }
