[package]
name = "server"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
cluster-config = { path = "../cluster-config" }
control-plane = { path = "../control-plane" }
data-model = { path = "../data-model" }
data-plane = { path = "../data-plane" }
engine-memory = { path = "../engine-memory" }
hyperdex-admin-protocol = { path = "../hyperdex-admin-protocol" }
hyperdex-client-protocol = { path = "../hyperdex-client-protocol" }
placement-core = { path = "../placement-core" }
storage-core = { path = "../storage-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
