[package]
name = "server"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[features]
omnipaxos = ["consensus-core/omnipaxos"]
openraft = ["consensus-core/openraft"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
cluster-config = { path = "../cluster-config" }
consensus-core = { path = "../consensus-core" }
control-plane = { path = "../control-plane" }
data-model = { path = "../data-model" }
data-plane = { path = "../data-plane" }
engine-memory = { path = "../engine-memory" }
hyperdex-admin-protocol = { path = "../hyperdex-admin-protocol" }
hyperdex-client-protocol = { path = "../hyperdex-client-protocol" }
legacy-frontend = { path = "../legacy-frontend" }
placement-core = { path = "../placement-core" }
storage-core = { path = "../storage-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
