[package]
name = "server"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[features]
omnipaxos = ["consensus-core/omnipaxos"]
openraft = ["consensus-core/openraft"]

[dependencies]
anyhow.workspace = true
bytes.workspace = true
cityhasher = "0.1.0"
grpc-api = { path = "../grpc-api" }
prost.workspace = true
cluster-config = { path = "../cluster-config" }
consensus-core = { path = "../consensus-core" }
control-plane = { path = "../control-plane" }
data-model = { path = "../data-model" }
data-plane = { path = "../data-plane" }
engine-memory = { path = "../engine-memory" }
engine-rocks = { path = "../engine-rocks" }
hyperdex-admin-protocol = { path = "../hyperdex-admin-protocol" }
hyperdex-client-protocol = { path = "../hyperdex-client-protocol" }
legacy-frontend = { path = "../legacy-frontend" }
legacy-protocol = { path = "../legacy-protocol" }
placement-core = { path = "../placement-core" }
storage-core = { path = "../storage-core" }
tempfile.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["net"] }
tonic.workspace = true
transport-core = { path = "../transport-core" }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
serial_test.workspace = true
