[package]
name = "simulation-harness"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bytes.workspace = true
cluster-config = { path = "../cluster-config" }
control-plane = { path = "../control-plane" }
data-model = { path = "../data-model" }
data-plane = { path = "../data-plane" }
engine-memory = { path = "../engine-memory" }
placement-core = { path = "../placement-core" }
storage-core = { path = "../storage-core" }
tokio.workspace = true
turmoil.workspace = true

[dev-dependencies]
proptest.workspace = true
