[package]
name = "simulation-harness"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(madsim)"] }

[dependencies]
bytes.workspace = true
cluster-config = { path = "../cluster-config" }
control-plane = { path = "../control-plane" }
data-model = { path = "../data-model" }
data-plane = { path = "../data-plane" }
engine-memory = { path = "../engine-memory" }
placement-core = { path = "../placement-core" }
storage-core = { path = "../storage-core" }
tokio.workspace = true
turmoil.workspace = true

[dev-dependencies]
anyhow.workspace = true
hegel = { package = "hegeltest", version = "0.2.6" }
hyperdex-admin-protocol = { path = "../hyperdex-admin-protocol" }
hyperdex-client-protocol = { path = "../hyperdex-client-protocol" }
madsim = "0.2.34"
proptest.workspace = true
server = { path = "../server" }
transport-core = { path = "../transport-core" }
