[package]
name = "transport-core"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
data-model = { path = "../data-model" }
serde.workspace = true
serde_json.workspace = true
