[package]
name = "transport-grpc"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
ordered-float.workspace = true
prost.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["net"] }
tonic.workspace = true
tracing.workspace = true
data-model = { path = "../data-model" }
hyperdex-admin-protocol = { path = "../hyperdex-admin-protocol" }
hyperdex-client-protocol = { path = "../hyperdex-client-protocol" }
server = { path = "../server" }
transport-core = { path = "../transport-core" }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"

[dev-dependencies]
cluster-config = { path = "../cluster-config" }
