[package]
name = "transport-grpc"
edition.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
grpc-api = { path = "../grpc-api" }
ordered-float.workspace = true
prost.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true, features = ["net"] }
tonic.workspace = true
tracing.workspace = true
data-model = { path = "../data-model" }
hyperdex-admin-protocol = { path = "../hyperdex-admin-protocol" }
hyperdex-client-protocol = { path = "../hyperdex-client-protocol" }
server = { path = "../server" }
transport-core = { path = "../transport-core" }

[dev-dependencies]
cluster-config = { path = "../cluster-config" }
legacy-frontend = { path = "../legacy-frontend" }
legacy-protocol = { path = "../legacy-protocol" }
